fix(form): makes it work on mobile better

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -12,3 +12,6 @@
   height: 100%;
   position: relative;
 }
+
+.a {
+}
